samples/_failures_safe/1761199680_7e178b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38890e1d.c: In function ‘main’:
./samples/SAFE/__tmp_38890e1d.c:151:15: error: missing terminating " character
  151 |     if (scanf("%zu %zu
      |               ^~~~~~~~
./samples/SAFE/__tmp_38890e1d.c:151:5: error: expected expression at end of input
  151 |     if (scanf("%zu %zu
      |     ^~
./samples/SAFE/__tmp_38890e1d.c:151:5: error: expected declaration or statement at end of input
